modificari template Simona

--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -1005,7 +1005,7 @@
                 </div>
             </div>
             <div class="divclass mt-6">
-                <div>{{T1581}}. {{T1582}}</div>
+                <div>m. {{T1582}}</div>
                 <div>
                     <select id="cm10m" name="cm10m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
@@ -1071,7 +1071,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1583}}. {{T1584}}</div>
+                <div>m. {{T1584}}</div>
                 <div>
                     <select id="cm11m" name="cm11m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
@@ -1827,7 +1827,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1587}}. {{T1588}}</div>
+                <div>m. {{T1588}}</div>
                 <div>
                     <select id="ct10m" name="ct10m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
@@ -1893,7 +1893,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1589}}. {{T1590}}</div>
+                <div>m. {{T1590}}</div>
                 <div>
                     <select id="ct11m" name="ct11m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
@@ -2597,7 +2597,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1591}}. {{T1592}}</div>
+                <div>m. {{T1592}}</div>
                 <div>
                     <select id="cg10m" name="cg10m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
@@ -2657,7 +2657,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1593}}. {{T1594}}</div>
+                <div>m. {{T1594}}</div>
                 <div>
                     <select id="cg11m" name="cg11m" class="selectclass">
                         <option value="-9">{{T1511}}</option>
