--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -1129,7 +1129,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1380}}. {{T1381}}</div>
+                <div>m. {{T1381}}</div>
                 <div>
                     <select id="cm11m" name="cm11m" class="selectclass">
                         <option value="-9">{{T1337}}</option>
@@ -1657,7 +1657,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1384}}. {{T1385}}</div>
+                <div>m. {{T1385}}</div>
                 <div>
                     <select id="ct11m" name="ct11m" class="selectclass">
                         <option value="-9">{{T1337}}</option>
@@ -2145,7 +2145,7 @@
             </div>
 
             <div class="divclass mt-6">
-                <div>{{T1386}}. {{T1387}}</div>
+                <div>m. {{T1387}}</div>
                 <div>
                     <select id="cg11m" name="cg11m" class="selectclass">
                         <option value="-9">{{T1337}}</option>
