--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -383,7 +383,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>{{T0096}}. {{T0097}}</div>
+                <div>m. {{T0097}}</div>
                 <div>
                     <select id="ptr8m" name="ptr8m" class="selectclass">
                         <option value="-9">{{T0089}}</option>
