curatenie clase cu items-start

--- a/src/templates/R/04_qmr.html
+++ b/src/templates/R/04_qmr.html
@@ -419,7 +419,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0138}}. {{T0139}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="la4-1" type="radio" value="{{la4-1}}" name="la4" class="valueclass" />
                         <label for="la4-1" class="labelclass">{{T0140}}</label>
@@ -500,7 +500,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0167}}. {{T0168}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af3-1" type="radio" value="{{af3-1}}" name="af3" class="valueclass" />
                         <label for="af3-1" class="labelclass">{{T0169}}</label>
@@ -931,7 +931,7 @@
                     <small class="block">{{T0215}}</small>
 
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af7_1" type="checkbox" value="{{af7_1-1}}" name="af7_1" class="valueclass" />
                         <label for="af7_1" class="labelclass">{{T0216}}</label>
@@ -953,7 +953,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0220}}. {{T0221}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af8-1" type="radio" value="{{af8-1}}" name="af8" class="valueclass" />
                         <label for="af8-1" class="labelclass">{{T0222}}</label>
@@ -967,7 +967,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0224}}. {{T0225}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af9-1" type="radio" value="{{af9-1}}" name="af9" class="valueclass" />
                         <label for="af9-1" class="labelclass">{{T0226}}</label>
@@ -981,7 +981,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0228}}. {{T0229}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af10-1" type="radio" value="{{af10-1}}" name="af10" class="valueclass" />
                         <label for="af10-1" class="labelclass">{{T0230}}</label>
@@ -995,7 +995,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0232}}. {{T0233}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af11-1" type="radio" value="{{af11-1}}" name="af11" class="valueclass" />
                         <label for="af11-1" class="labelclass">{{T0234}}</label>
@@ -1020,7 +1020,7 @@
                     {{T0238}}. {{T0239}}
                     <small class="block">{{T0240}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af12_1" type="checkbox" value="{{af12_1-1}}" name="af12_1" class="valueclass" />
                         <label for="af12_1" class="labelclass">{{T0241}}</label>
@@ -1067,7 +1067,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0250}}. {{T0251}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af13a-1" type="radio" value="{{af13a-1}}" name="af13a" class="valueclass" />
                         <label for="af13a-1" class="labelclass">{{T0252}}</label>
@@ -1105,7 +1105,7 @@
                     {{T0260}}. {{T0261}}
                     <small class="block">{{T0262}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af14_1" type="checkbox" value="{{af14_1-1}}" name="af14_1" class="valueclass" />
                         <label for="af14_1" class="labelclass">{{T0263}}</label>
@@ -1134,7 +1134,7 @@
                     {{T0268}}. {{T0269}}
                     <small class="block">{{T0270}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="af15_1" type="checkbox" value="{{af15_1-1}}" name="af15_1" class="valueclass" />
                         <label for="af15_1" class="labelclass">{{T0271}}</label>
@@ -1301,7 +1301,7 @@
                     {{T0294}}. {{T0295}}
                     <small class="block">{{T0296}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac3_1" type="checkbox" value="{{ac3_1-1}}" name="ac3_1" class="valueclass" />
                         <label for="ac3_1" class="labelclass">{{T0297}}</label>
@@ -1333,7 +1333,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0303}}. {{T0304}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac4-1" type="radio" value="{{ac4-1}}" name="ac4" class="valueclass" />
                         <label for="ac4-1" class="labelclass">{{T0305}}</label>
@@ -1463,7 +1463,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0336}}. {{T0337}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac8a-5" type="radio" value="{{ac8a-1}}" name="ac8a" class="valueclass" />
                         <label for="ac8a-5" class="labelclass">{{T0338}}</label>
@@ -1541,7 +1541,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0363}}. {{T0364}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac9d-1" type="radio" value="{{ac9d-1}}" name="ac9d" class="valueclass" />
                         <label for="ac9d-5" class="labelclass">{{T0365}}</label>
@@ -1610,7 +1610,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0386}}. {{T0387}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac10d-1" type="radio" value="{{ac10d-1}}" name="ac10d" class="valueclass" />
                         <label for="ac10d-5" class="labelclass">{{T0388}}</label>
@@ -1723,7 +1723,7 @@
                     {{T0420}}. {{T0421}}
                     <small class="text-sm italic">{{T0422}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ac14a-1" type="radio" value="{{ac14a-1}}" name="ac14a" class="valueclass" />
                         <label for="ac14a-1" class="labelclass">{{T0423}}</label>
@@ -1765,7 +1765,7 @@
                     {{T0435}}. {{T0436}}
                     <small class="block">{{T0437}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="cc1_1" type="checkbox" value="{{cc1_1-1}}" name="cc1_1" class="valueclass" />
                         <label for="cc1_1" class="labelclass">{{T0438}}</label>
@@ -1786,7 +1786,7 @@
                     <small class="text-sm italic block">{{T0441}}</small>
                     {{T0442}}. {{T0443}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="cc2-1" type="radio" value="{{cc2-1}}" name="cc2" class="valueclass" />
                         <label for="cc2-1" class="labelclass">{{T0444}}</label>
@@ -1815,7 +1815,7 @@
                     <small class="text-sm italic block">{{T0449}}</small>
                     {{T0450}}. {{T0451}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="cc3-1" type="radio" value="{{cc3-1}}" name="cc3" class="valueclass" />
                         <label for="cc3-1" class="labelclass">{{T0452}}</label>
@@ -1880,7 +1880,7 @@
                 <div class="col-span-1">
                     {{T0468}}. {{T0469}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="cc66-1" type="radio" value="{{cc66-1}}" name="cc66" class="valueclass" />
                         <label for="cc66-1" class="labelclass">{{T0470}}</label>
@@ -1900,7 +1900,7 @@
                 <div class="col-span-1">
                     {{T0473}}. {{T0474}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex flex-col gap-4">
                         <div class="grid grid-cols-2">
                             <div>{{T0475}}</div>
@@ -2112,7 +2112,7 @@
                     {{T0530}}. {{T0531}}
                     <small class="block italic">{{T0532}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="rce2_1" type="checkbox" value="{{rce2_1-1}}" name="rce2_1" class="valueclass" />
                         <label for="rce2_1" class="labelclass">{{T0533}}</label>
@@ -2138,7 +2138,7 @@
                 <div class="col-span-1">
                     {{T0539}}. {{T0540}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex flex-col gap-4">
                         <div class="grid grid-cols-2">
                             <div>{{T0541}}</div>
@@ -2210,7 +2210,7 @@
                     {{T0551}}. {{T0552}}
                     <small class="block italic">{{T0553}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="rce5_1" type="checkbox" value="{{rce5_1-1}}" name="rce5_1" class="valueclass" />
                         <label for="rce5_1" class="labelclass">{{T0554}}</label>
@@ -2242,7 +2242,7 @@
                 <div class="col-span-1">
                     {{T0560}}. {{T0561}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center gap-2">
                         <div>{{T0562}}</div>
                         <input type="text" id="rce61" name="rce61" class="inputclass block w-32" />
@@ -2255,7 +2255,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0564}}. {{T0565}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="rce7-5" type="radio" value="{{rce7-1}}" name="rce7" class="valueclass" />
                         <label for="rce7-5" class="labelclass">{{T0566}}</label>
@@ -2299,7 +2299,7 @@
                     {{T0576}} {{T0577}}
                     <small class="block italic">{{T0578}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="edu1_1" type="checkbox" value="{{edu1_1-1}}" name="edu1_1" class="valueclass" />
                         <label for="edu1_1" class="labelclass">{{T0579}}</label>
@@ -2513,7 +2513,7 @@
                     {{T0617}}. {{T0618}}
                     <small class="block italic">{{T0619}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ft3_1" type="checkbox" value="{{ft3_1-1}}" name="ft3_1" class="valueclass" />
                         <label for="edu1_1" class="labelclass">{{T0620}}</label>
@@ -2557,7 +2557,7 @@
                 <div class="col-span-1">
                     {{T0629}}. {{T0630}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ft4a-1" type="radio" value="{{ft4a-1}}" name="ft4a" class="valueclass" />
                         <label for="ft4a-1" class="labelclass">{{T0631}}</label>
@@ -2581,7 +2581,7 @@
                 <div class="col-span-1">
                     {{T0635}}. {{T0636}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ft4b-1" type="radio" value="{{ft4b-1}}" name="ft4b" class="valueclass" />
                         <label for="ft4b-1" class="labelclass">{{T0637}}</label>
