--- a/src/templates/R/05_yplcs.html
+++ b/src/templates/R/05_yplcs.html
@@ -311,7 +311,7 @@
             <p class="mt-6">{{T0099}}. {{T0100}}</p>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0101}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="pi10a-1" type="radio" value="{{pi9a-1}}" name="pi9a" class="valueclass" />
                         <label for="pi10-1" class="labelclass">{{T0102}}</label>
@@ -430,7 +430,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0132}}. {{T0133}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="pr2-1" type="radio" value="{{pr2-1}}" name="pr2" class="valueclass" />
                         <label for="pr2-1" class="labelclass">{{T0134}}</label>
@@ -476,7 +476,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0147}}. {{T0148}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="lv1-1" type="radio" value="{{lv1-1}}" name="lv1" class="valueclass" />
                         <label for="lv1-1" class="labelclass">{{T0149}}</label>
@@ -513,7 +513,7 @@
                 <div>
                     {{T0156}}. {{T0157}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="lv2_1" type="checkbox" value="{{lv2_1-1}}" name="lv2_1" class="valueclass" />
                         <label for="lv2_1" class="labelclass">{{T0159}}</label>
@@ -560,7 +560,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0170}}. {{T0171}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="lv4-1" type="radio" value="{{lv4-1}}" name="lv4" class="valueclass" />
                         <label for="lv1-1" class="labelclass">{{T0172}}</label>
@@ -600,7 +600,7 @@
                 <div>
                     {{T0181}}. {{T0182}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="lv6_1" type="checkbox" value="{{lv6_1-1}}" name="lv6_1" class="valueclass" />
                         <label for="lv6_1" class="labelclass">{{T0184}}</label>
@@ -682,7 +682,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0207}}. {{T0208}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee1-1" type="radio" value="{{ee1-1}}" name="ee1" class="valueclass" />
                         <label for="ee1-1" class="labelclass">{{T0209}}</label>
@@ -712,7 +712,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0216}}. {{T0217}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee2-1" type="radio" value="{{ee2-1}}" name="ee2" class="valueclass" />
                         <label for="ee2-1" class="labelclass">{{T0218}}</label>
@@ -753,7 +753,7 @@
                     {{T0226}}. {{T0227}}
                     <small class="block italic mt-1">{{T0228}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee4_1" type="checkbox" value="{{ee4_1-1}}" name="ee4_1" class="valueclass" />
                         <label for="ee4_1" class="labelclass">{{T0229}}</label>
@@ -784,7 +784,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0235}}. {{T0236}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee5-1" type="radio" value="{{ee5-1}}" name="ee5" class="valueclass" />
                         <label for="ee5-1" class="labelclass">{{T0237}}</label>
@@ -874,7 +874,7 @@
                     {{T0261}}. {{T0262}}
                     <small class="block italic mt-1">{{T0263}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee10_1" type="checkbox" value="{{ee10_1-1}}" name="ee10_1" class="valueclass" />
                         <label for="ee10_1" class="labelclass">{{T0264}}</label>
@@ -904,7 +904,7 @@
                     {{T0269}}. {{T0270}}
                     <small class="block italic mt-1">{{T0271}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ee11_1" type="checkbox" value="{{ee11_1-1}}" name="ee11_1" class="valueclass" />
                         <label for="ee11_1" class="labelclass">{{T0272}}</label>
@@ -1001,7 +1001,7 @@
                     {{T0295}}. {{T0296}}
                     <small class="block italic mt-1">{{T0297}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="he2-1" type="radio" value="{{he2-1}}" name="he2" class="valueclass" />
                         <label for="he2-1" class="labelclass">{{T0298}}</label>
@@ -1036,7 +1036,7 @@
                     {{T0305}}. {{T0306}}
                     <small class="italic block mt-1">{{T0307}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="he4_1" type="checkbox" value="{{he4_1-1}}" name="he4_1" class="valueclass" />
                         <label for="he4_1" class="labelclass">{{T0308}}</label>
@@ -1070,7 +1070,7 @@
                     {{T0314}}. {{T0315}}
                     <small class="italic block mt-1">{{T0316}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="he5_1" type="checkbox" value="{{he5_1-1}}" name="he5_1" class="valueclass" />
                         <label for="he5_1" class="labelclass">{{T0317}}</label>
@@ -1204,7 +1204,7 @@
                     {{T0352}}. {{T0353}}
                     <small class="italic block mt-1">{{T0354}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="heat23_1" type="checkbox" value="{{heat23_1-1}}" name="heat23_1" class="valueclass" />
                         <label for="heat23_1" class="labelclass">{{T0355}}</label>
@@ -1277,7 +1277,7 @@
                 <div>
                     {{T0371}}. {{T0372}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="heat24_1" type="checkbox" value="{{heat24_1-1}}" name="heat24_1" class="valueclass" />
                         <label for="heat24_1" class="labelclass">{{T0373}}</label>
@@ -1379,7 +1379,7 @@
                 <div>
                     {{T0398}}. {{T0399}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="he12_1" type="checkbox" value="{{he12_1-1}}" name="he12_1" class="valueclass" />
                         <label for="he12_1" class="labelclass">{{T0400}}</label>
@@ -1430,7 +1430,7 @@
                 <div>
                     {{T0411}}. {{T0412}}
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="he14_1" type="checkbox" value="{{he14_1-1}}" name="he14_1" class="valueclass" />
                         <label for="he14_1" class="labelclass">{{T0413}}</label>
@@ -1585,7 +1585,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0454}}. {{T0455}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ls1-1" type="radio" value="{{ls1-1}}" name="ls1" class="valueclass" />
                         <label for="ls1-1" class="labelclass">{{T0456}}</label>
@@ -1614,7 +1614,7 @@
                     {{T0461}}. {{T0462}}
                     <small class="italic block mt-1">{{T0463}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ls2_1" type="checkbox" value="{{ls2_1-1}}" name="ls2_1" class="valueclass" />
                         <label for="ls2_1" class="labelclass">{{T0464}}</label>
@@ -1682,7 +1682,7 @@
                     {{T0480}}. {{T0481}}
                     <small class="italic block mt-1">{{T0482}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ls4_1" type="checkbox" value="{{ls4_1-1}}" name="ls4_1" class="valueclass" />
                         <label for="ls4_1" class="labelclass">{{T0483}}</label>
@@ -1724,7 +1724,7 @@
                     {{T0491}}. {{T0492}}
                     <small class="italic block mt-1">{{T0493}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ls5_1" type="checkbox" value="{{ls5_1-1}}" name="ls5_1" class="valueclass" />
                         <label for="ls5_1" class="labelclass">{{T0494}}</label>
@@ -1769,7 +1769,7 @@
                     {{T0503}}. {{T0504}}
                     <small class="italic block mt-1">{{T0505}}</small>
                 </div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc1_1" type="checkbox" value="{{sc1_1-1}}" name="sc1_1" class="valueclass" />
                         <label for="sc1_1" class="labelclass">{{T0506}}</label>
@@ -1813,7 +1813,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0515}}. {{T0516}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc2-1" type="radio" value="{{sc2-1}}" name="sc2" class="valueclass" />
                         <label for="sc2-1" class="labelclass">{{T0517}}</label>
@@ -1834,7 +1834,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0521}}. {{T0522}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc3-1" type="radio" value="{{sc3-1}}" name="sc3" class="valueclass" />
                         <label for="sc3-1" class="labelclass">{{T0523}}</label>
@@ -1851,7 +1851,7 @@
             </div>
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0526}}. {{T0527}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc4-1" type="radio" value="{{sc4-1}}" name="sc4" class="valueclass" />
                         <label for="sc4-1" class="labelclass">{{T0528}}</label>
@@ -1869,7 +1869,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0531}}. {{T0532}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc5-1" type="radio" value="{{sc5-1}}" name="sc5" class="valueclass" />
                         <label for="sc5-1" class="labelclass">{{T0533}}</label>
@@ -1924,7 +1924,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0547}}. {{T0548}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="sc9-1" type="radio" value="{{sc9-1}}" name="sc9" class="valueclass" />
                         <label for="sc9-1" class="labelclass">{{T0549}}</label>
@@ -2042,7 +2042,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">{{T0585}}. {{T0586}}</div>
-                <div class="col-span-1 flex flex-col gap-4">
+                <div class="div3class">
                     <div class="flex gap-4">
                         <div class="flex items-center">
                             <input id="cr9-1" type="radio" value="{{cr9-1}}" name="cr9" class="valueclass" />
