--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -264,7 +264,7 @@
 
             <div class="grid grid-cols-2 gap-4 mt-6">
                 <div class="col-span-1 flex items-center">{{T0084}}. {{T0085}}</div>
-                <div class="col-span-1 flex flex-col gap-4">
+                <div class="div3class">
                     <div class="centerflex">
                         <input id="lk15-1" type="radio" value="{{lk15-1}}" name="lk15" class="valueclass" />
                         <label for="lk15-1" class="labelclass">{{T0086}}</label>
@@ -632,7 +632,7 @@
                 </div>
             </div>
 
-            <h3 class="h3class">{{T0180}}</h3>
+            <h3 class="h3class mt-10">{{T0180}}</h3>
 
             <div class="divclass mt-6">
                 <div>{{T0181}}. {{T0182}}</div>
@@ -1152,7 +1152,7 @@
                 </div>
             </div>
 
-            <h3 class="h3class">{{T0323}}</h3>
+            <h3 class="h3class mt-10">{{T0323}}</h3>
 
             <div class="divclass mt-6">
                 <div>{{T0324}}. {{T0325}}</div>
@@ -1682,7 +1682,7 @@
 
             <!-- <p class="mt-10 italic text-red-500">{{T0459}}</p> -->
 
-            <h3 class="h3class">{{T0460}}</h3>
+            <h3 class="h3class mt-10">{{T0460}}</h3>
 
             <div class="divclass mt-6">
                 <div>CG0.</div>
@@ -4625,7 +4625,8 @@
             <h3 class="mt-10 text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">{{T1024}}</h3>
 
             <div class="divclass mt-10">
-                <div>{{T1025}}. {{T1026}}</div><div class="div4class">
+                <div>{{T1025}}. {{T1026}}</div>
+                <div class="div4class">
                     <div class="centerflex">
                         <input id="lk21a-1" type="radio" value="{{lk21a-1}}" name="lk21a" class="valueclass" />
                         <label for="lk21a-1" class="labelclass">{{T1027}}</label>
