--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -164,7 +164,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0055}}. {{T0056}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="j3-1" type="radio" value="{{j3-1}}" name="j3" class="valueclass" />
                         <label for="j3-1" class="labelclass">{{T0057}}</label>
@@ -215,7 +215,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0069}}. {{T0070}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="j6-1" type="radio" value="{{j6-1}}" name="j6" class="valueclass" />
                         <label for="j6-1" class="labelclass">{{T0071}}</label>
@@ -261,7 +261,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0087}}. {{T0088}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="j8-1" type="radio" value="{{j8-1}}" name="j8" class="valueclass" />
                         <label for="j8-1" class="labelclass">{{T0089}}</label>
@@ -316,7 +316,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0105}}. {{T0106}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="e4-1" type="radio" value="{{e4-1}}" name="e4" class="valueclass" />
                         <label for="e4-1" class="labelclass">{{T0071}}</label>
@@ -376,7 +376,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0119}}. {{T0120}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="e8-1" type="radio" value="{{e8-1}}" name="e8" class="valueclass" />
                         <label for="e8-1" class="labelclass">{{T0121}}</label>
@@ -416,7 +416,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0129}}. {{T0130}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="e9-1" type="radio" value="{{e9-1}}" name="e9" class="valueclass" />
                         <label for="e4-1" class="labelclass">{{T0131}}</label>
