--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -261,7 +261,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">PTR7. {{T0053}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ptr7-1" type="radio" value="{{ptr7-1}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-1" class="labelclass">{{T0054}}</label>
@@ -303,7 +303,7 @@
 
             <div class="divclass mt-6">
                 <div class="col-span-1">PTR8. {{T0062}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ptr8-1" type="radio" value="{{ptr8-1}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-1" class="labelclass">{{T0063}}</label>
