--- a/src/templates/R/07_ftch.html
+++ b/src/templates/R/07_ftch.html
@@ -142,7 +142,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0039}}. {{T0042}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ifp3-1" type="radio" value="{{ifp3-1}}" name="ifp3" class="valueclass" />
                         <label for="ifp3-1" class="labelclass">{{T0043}}</label>
@@ -202,7 +202,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0061}}. {{T0062}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ifm5-1" type="radio" value="{{ifm5-1}}" name="ifm5" class="valueclass" />
                         <label for="ifm5-1" class="labelclass">{{T0063}}</label>
@@ -240,7 +240,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0071}}. {{T0072}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ifm6-1" type="radio" value="{{ifm6-1}}" name="ifm6" class="valueclass" />
                         <label for="ifm6-1" class="labelclass">{{T0073}}</label>
@@ -347,7 +347,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0102}}. {{T0103}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ift5-1" type="radio" value="{{ift5-1}}" name="ift5" class="valueclass" />
                         <label for="ift5-1" class="labelclass">{{T0104}}</label>
@@ -385,7 +385,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0112}}. {{T0113}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ift6-1" type="radio" value="{{ift6-1}}" name="ift6" class="valueclass" />
                         <label for="ift6-1" class="labelclass">{{T0114}}</label>
@@ -633,7 +633,7 @@
 
             <div id="c1cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0173}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c1cn1" type="checkbox" value="{{fc4_c1cn1-1}}" name="fc4_c1cn1" class="cbclass">
                         <label for="fc4_c1cn1" class="labelclass">{{T0282}}</label>
@@ -734,7 +734,7 @@
 
             <div id="c2cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0178}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c2cn1" type="checkbox" value="{{fc4_c2cn1-1}}" name="fc4_c2cn1" class="cbclass">
                         <label for="fc4_c2cn1" class="labelclass">{{T0282}}</label>
@@ -836,7 +836,7 @@
 
             <div id="c3cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0179}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c3cn1" type="checkbox" value="{{fc4_c3cn1-1}}" name="fc4_c3cn1" class="cbclass">
                         <label for="fc4_c3cn1" class="labelclass">{{T0282}}</label>
@@ -939,7 +939,7 @@
 
             <div id="c4cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0180}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c4cn1" type="checkbox" value="{{fc4_c4cn1-1}}" name="fc4_c4cn1" class="cbclass">
                         <label for="fc4_c4cn1" class="labelclass">{{T0282}}</label>
@@ -1041,7 +1041,7 @@
 
             <div id="c5cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0181}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c5cn1" type="checkbox" value="{{fc4_c5cn1-1}}" name="fc4_c5cn1" class="cbclass">
                         <label for="fc4_c5cn1" class="labelclass">{{T0282}}</label>
@@ -1143,7 +1143,7 @@
 
             <div id="c6cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0182}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c6cn1" type="checkbox" value="{{fc4_c6cn1-1}}" name="fc4_c6cn1" class="cbclass">
                         <label for="fc4_c6cn1" class="labelclass">{{T0282}}</label>
@@ -1245,7 +1245,7 @@
 
             <div id="c7cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0183}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c7cn1" type="checkbox" value="{{fc4_c7cn1-1}}" name="fc4_c7cn1" class="cbclass">
                         <label for="fc4_c7cn1" class="labelclass">{{T0282}}</label>
@@ -1347,7 +1347,7 @@
 
             <div id="c8cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0184}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c8cn1" type="checkbox" value="{{fc4_c8cn1-1}}" name="fc4_c8cn1" class="cbclass">
                         <label for="fc4_c8cn1" class="labelclass">{{T0282}}</label>
@@ -1449,7 +1449,7 @@
 
             <div id="c9cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0185}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c9cn1" type="checkbox" value="{{fc4_c9cn1-1}}" name="fc4_c9cn1" class="cbclass">
                         <label for="fc4_c9cn1" class="labelclass">{{T0282}}</label>
@@ -1551,7 +1551,7 @@
 
             <div id="c10cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0186}} {{T0279}}<small class="smallclass">{{T0280}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c10cn1" type="checkbox" value="{{fc4_c10cn1-1}}" name="fc4_c10cn1" class="cbclass">
                         <label for="fc4_c10cn1" class="labelclass">{{T0282}}</label>
@@ -2112,7 +2112,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0233}}. {{T0234}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="qs1-1" type="radio" value="{{qs1-1}}" name="qs1" class="valueclass" />
                         <label for="qs1-1" class="labelclass">{{T0235}}</label>
