--- a/src/templates/R/08_pfq.html
+++ b/src/templates/R/08_pfq.html
@@ -134,7 +134,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0038}}. {{T0039}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="pf3-1" type="radio" value="{{pf3-1}}" name="pf3" class="valueclass" />
                         <label for="pf3-1" class="labelclass">{{T0040}}</label>
@@ -171,7 +171,7 @@
             </div>
             <div class="divclass mt-10">
                 <div>{{T0050}}. {{T0051}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ig4-1" type="radio" value="{{ig4-1}}" name="ig4" class="valueclass" />
                         <label for="ig4-1" class="labelclass">{{T0052}}</label>
@@ -197,7 +197,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0059}}. {{T0060}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ig6-1" type="radio" value="{{ig6-1}}" name="ig6" class="valueclass" />
                         <label for="ig6-1" class="labelclass">{{T0061}}</label>
@@ -227,7 +227,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0067}}. {{T0068}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ig7-1" type="radio" value="{{ig7-1}}" name="ig7" class="valueclass" />
                         <label for="ig7-1" class="labelclass">{{T0069}}</label>
@@ -265,7 +265,7 @@
 
             <div class="divclass mt-10">
                 <div>{{T0077}}. {{T0078}}</div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="ig8-1" type="radio" value="{{ig8-1}}" name="ig8" class="valueclass" />
                         <label for="ig8-1" class="labelclass">{{T0079}}</label>
@@ -406,7 +406,7 @@
 
             <div id="c1cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0114}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c1cn1" type="checkbox" value="{{fc4_c1cn1-1}}" name="fc4_c1cn1" class="cbclass">
                         <label for="fc4_c1cn1" class="labelclass">{{T0229}}</label>
@@ -514,7 +514,7 @@
 
             <div id="c2cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0115}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c2cn1" type="checkbox" value="{{fc4_c2cn1-1}}" name="fc4_c2cn1" class="cbclass">
                         <label for="fc4_c2cn1" class="labelclass">{{T0229}}</label>
@@ -623,7 +623,7 @@
 
             <div id="c3cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0116}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c3cn1" type="checkbox" value="{{fc4_c3cn1-1}}" name="fc4_c3cn1" class="cbclass">
                         <label for="fc4_c3cn1" class="labelclass">{{T0229}}</label>
@@ -733,7 +733,7 @@
 
             <div id="c4cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0117}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c4cn1" type="checkbox" value="{{fc4_c4cn1-1}}" name="fc4_c4cn1" class="cbclass">
                         <label for="fc4_c4cn1" class="labelclass">{{T0229}}</label>
@@ -842,7 +842,7 @@
 
             <div id="c5cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0118}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c5cn1" type="checkbox" value="{{fc4_c5cn1-1}}" name="fc4_c5cn1" class="cbclass">
                         <label for="fc4_c5cn1" class="labelclass">{{T0229}}</label>
@@ -951,7 +951,7 @@
 
             <div id="c6cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0119}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c6cn1" type="checkbox" value="{{fc4_c6cn1-1}}" name="fc4_c6cn1" class="cbclass">
                         <label for="fc4_c6cn1" class="labelclass">{{T0229}}</label>
@@ -1060,7 +1060,7 @@
 
             <div id="c7cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0120}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c7cn1" type="checkbox" value="{{fc4_c7cn1-1}}" name="fc4_c7cn1" class="cbclass">
                         <label for="fc4_c7cn1" class="labelclass">{{T0229}}</label>
@@ -1169,7 +1169,7 @@
 
             <div id="c8cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0121}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c8cn1" type="checkbox" value="{{fc4_c8cn1-1}}" name="fc4_c8cn1" class="cbclass">
                         <label for="fc4_c8cn1" class="labelclass">{{T0229}}</label>
@@ -1278,7 +1278,7 @@
 
             <div id="c9cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0122}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c9cn1" type="checkbox" value="{{fc4_c9cn1-1}}" name="fc4_c9cn1" class="cbclass">
                         <label for="fc4_c9cn1" class="labelclass">{{T0229}}</label>
@@ -1387,7 +1387,7 @@
 
             <div id="c10cn" class="hidden grid grid-cols-2 gap-4 items-center mt-10">
                 <div>{{T0123}} {{T0226}}<small class="smallclass">{{T0227}}</small></div>
-                <div class="col-span-1 flex flex-col gap-2">
+                <div class="div2class">
                     <div class="flex items-center">
                         <input id="fc4_c10cn1" type="checkbox" value="{{fc4_c10cn1-1}}" name="fc4_c10cn1" class="cbclass">
                         <label for="fc4_c10cn1" class="labelclass">{{T0229}}</label>
